Job Orchestrator/src/objects/Job_Scheduler_Log__c.object
<CustomObject>
    <fields>
        <fullName>Description_of_Error__c</fullName>
        <description>Error Description If any</description>
        <label>Description of Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <description>Cron Id of the Scheduler</description>
        <label>Next Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Time__c</fullName>
        <description>Time at which this instance ran.</description>
        <label>Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Instance</description>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Job Scheduler Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Run_Time__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Description_of_Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JSLog-{0000}</displayFormat>
        <label>Job Scheduler Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Scheduler Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>